2018-11-22 <kennethj@gagarin.uit.no>
    * ad_export_autogroups_undervisning.py:  added missing include unicode_literals
2018-11-19 <kennethj@gagarin.uit.no>
    * populate_fronter_groups.py:   updated to handle utf-8 encoding instead of iso-8859-1
2018-11-01  <kennethj@gagarin.uit.no>
    * export_oid.py: removed utf-8 encoding on contact_value. it has already been encoded.
    * export_cristin.py:    updated to handle utf-8 input and iso-8859-1 output. (we're really not happy about the solution, but it works :)
2018-10-31  <kennethj@gagarin.uit.no>
    * process_systemx.py:   updated to handle utf-8 data. updated how to calculate gecos
    * export_oid.py:    removed double utf-8 encoding
    * process_students.py: upated to handle utf-8 data
2018-10-25  <kennethj@gagarin.uit.no>
    * export_ad.py: added missing unicode_literals import
    * import_system_accounts.py:    updated to handle unicode, also replaced function that creates unicode to use transliterate
    * .vscode: added code debug file
2018-10-25  <kennethj@gagarin.uit.no>
    * import_tlf.py: added sendmail import (which was removed while testing)
2018-10-25  <kennethj@gagarin.uit.no>
    * ADquickSync.py:   fixed indentation mess.

2018-10-23    <kennethj@gagarin.uit.no>
    * ADquickSync.py:   updated to read json from changelog.
2018-10-21    <kennethj@gagarin.uit.no>
    * ad_export_autogroups_undervisning.py:  updated to read utf-8 instead of iso-8859-1
    * export_ad.py : updated to read utf-8 instead of iso-8859-1
    * export_ldap.py : updated to read utf-8 instead of iso-8859-1. also fixed 2 parameter name changes
    * export_oid.py:  updated to read utf-8 instead of iso-8859-1
    * export_securimaster.py: updated to read utf-8 instead of iso-8859-1
    * generate_groups_ldif.py: updated to read utf-8 instead of iso-8859-1
    * generate_temp_employee_xml.py: updated to read utf-8 instead of iso-8859-1

2018-10-21    <kennethj@gagarin.uit.no>